3. Прокачай Java. Завершаем проект "Экзамен"[#180964]

--- a/app/src/main/res/layout/exam_add.xml
+++ b/app/src/main/res/layout/exam_add.xml
@@ -14,8 +14,15 @@
         android:text="Name" />
 
     <Button
+        android:id="@+id/new_question"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add question" />
+
+    <Button
         android:id="@+id/save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Save" />
+
 </LinearLayout>
