--- a/app/src/main/res/layout/info_exam.xml
+++ b/app/src/main/res/layout/info_exam.xml
@@ -14,7 +14,7 @@
         android:textSize="24dp"/>
 
     <TextView
-        android:id="@+id/result"
+        android:id="@+id/res"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="20"
